[package]
name = "chatter"
version = "0.1.0"
authors = ["mc962 <11969409+mc962@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.2.0"
actix-web-actors="3" # actors specific to web
actix = "0.10.0" # actors
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.11"
fern = "0.6.0"
chrono = "0.4.19"